# LearnRocket

./: .gitignore  Cargo.toml  README.md
scripts/: server.sh
src/: main.rs
src/libs/schema/: mod.rs  models.rs
src/libs/structures/: mod.rs  models.rs
